# dualsphysics_algae

./: CHANGES.txt  README.md  chpermissions.sh
New Files/: brainstorm.cpp  initializer.py
doc/help/: GenCase_Help.out
doc/xml_format/: CaseTemplate.xml
examples/chrono/01_Pendulum/: CaseDemolisher_Def.xml  CasePendulum_Def.xml  wCaseDemolisher_win64_CPU.bat  wCaseDemolisher_win64_GPU.bat  wCasePendulum_win64_CPU.bat  wCasePendulum_win64_GPU.bat  xCaseDemolisher_linux64_CPU.sh  xCaseDemolisher_linux64_GPU.sh  xCasePendulum_linux64_CPU.sh  xCasePendulum_linux64_GPU.sh
examples/chrono/02_Spring/: CaseBungieJump_Def.xml  CaseInitialMotionSMC_Def.xml  CaseInitialMotion_Def.xml  wCaseBungieJump_win64_CPU.bat  wCaseBungieJump_win64_GPU.bat  wCaseInitialMotionSMC_win64_CPU.bat  wCaseInitialMotionSMC_win64_GPU.bat  wCaseInitialMotion_win64_CPU.bat  wCaseInitialMotion_win64_GPU.bat  xCaseBungieJump_linux64_CPU.sh  xCaseBungieJump_linux64_GPU.sh  xCaseInitialMotionSMC_linux64_CPU.sh  xCaseInitialMotionSMC_linux64_GPU.sh  xCaseInitialMotion_linux64_CPU.sh  xCaseInitialMotion_linux64_GPU.sh
examples/chrono/03_FlexibleGate/: CaseFlexibleGate_Def.xml  wCaseFlexibleGate_win64_CPU.bat  wCaseFlexibleGate_win64_GPU.bat  xCaseFlexibleGate_linux64_CPU.sh  xCaseFlexibleGate_linux64_GPU.sh
examples/chrono/04_Pelamis/: CasePelamis_Def.xml  Segment.stl  wCasePelamis_win64_CPU.bat  wCasePelamis_win64_GPU.bat  xCasePelamis_linux64_CPU.sh  xCasePelamis_linux64_GPU.sh
examples/chrono/05_OWSC/: CaseOWSC3D_Def.xml  CaseOWSC3D_flap.stl  CaseOWSC3D_tank.stl  Command Prompt.lnk  wCaseOWSC3D_win64_CPU.bat  wCaseOWSC3D_win64_GPU.bat  xCaseOWSC3D_linux64_CPU.sh  xCaseOWSC3D_linux64_GPU.sh
examples/chrono/06_ZipLine/: CaseZipLine_Def.xml  wCaseZipLine_win64_CPU.bat  wCaseZipLine_win64_GPU.bat  xCaseZipLine_linux64_CPU.sh  xCaseZipLine_linux64_GPU.sh
examples/motion/: Command Prompt.lnk  Motion01.xml  Motion02.xml  Motion03.xml  Motion04.xml  Motion05.xml  Motion06.xml  Motion07.xml  Motion08.xml  Motion09.xml  wMotion_win64.bat  xMotion_linux64.sh
src/source/: CMakeLists.txt  main.cpp
src_extra/ToVTK/source/: CMakeLists.txt  JCfgRun.cpp  JCfgRun.h  JNumexLibDef.h  JSpacePartsDef.h  JVtkLibDef.h  Makefile  main.cpp
src_flexstruc/VS/: DualSPHysics5Re.vcxproj  DualSPHysics5ReCpu.vcxproj
src_flexstruc/source/: CMakeLists.txt  Makefile  Makefile_cpu
(+1677 files in other folders)
